--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.19.0",
     "css-loader": "^3.5.3",
     "express": "^4.17.1",
+    "firebase": "^7.15.0",
     "lodash": "^4.17.15",
     "nodemon": "^2.0.4",
     "react": "^16.13.1",
